<resources>
    <string name="app_name">Eshow</string>
    <!--登录注册-->
    <string name="login_code">验证码登录 ></string>
    <string name="login_pass">密码登录 ></string>
    <string name="lose_password">忘记密码？</string>
    <string name="losepass">忘记密码</string>
    <string name="other_login_notice">第三方快捷登录</string>
    <string name="wx_login">微信登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="agree">我已阅读并同意</string>
    <string name="login_agree">登录即同意</string>
    <string name="app_agreement">用户协议</string>
    <string name="agreement">《Eshow使用协议》</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">确认密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="new_password_again_hint">请再次输入新密码</string>
    <string name="password_notice">密码长度6-20位，字母或数字</string>
    <string name="old_password_hint">请输入原密码</string>
    <!--首页-->
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="qiniu_upload">七牛上传</string>
    <string name="reload">重新加载</string>
    <string name="hint_badge_count">请输入角标数字</string>
    <string name="show_badge">显示</string>
    <string name="clear_badge">清除</string>
    <string name="db_add">增</string>
    <string name="db_del">删</string>
    <string name="db_edit">改</string>
    <string name="db_search">查</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="anim_translate">平移</string>
    <string name="anim_scale">缩放</string>
    <string name="anim_rotate">旋转</string>
    <string name="anim_alpha">透明</string>
    <!--设置-->
    <string name="setting_account_safe">账号与安全</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_aboutus">关于我们</string>
    <string name="setting_question">常见问题</string>
    <string name="logout">退出</string>
</resources>
